--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,9 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
 
     implementation 'com.github.bumptech.glide:glide:4.7.1'
-    // Glide v4 uses this new annotation processor -- see https://bumptech.github.io/glide/doc/generatedapi.html
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
+//    // Glide v4 uses this new annotation processor -- see https://bumptech.github.io/glide/doc/generatedapi.html
+//    annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
+//    implementation 'com.github.bumptech.glide:glide:4.7.1'
+//    // Glide v4 uses this new annotation processor -- see https://bumptech.github.io/glide/doc/generatedapi.html
+//    annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
 }
